# mergers

./: .gitignore  AGENT_TOOL_GAPS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-mode-separation.md  PLAN-typedappstate-migration.md  PLAN-work-item-grouping.md  PLAN.md  PROGRESS-mode-separation.md  PROGRESS-work-item-grouping.md  README.md  SECURITY.md  SNAPSHOT_TESTING.md  THIRD_PARTY_LICENSES  build.rs  cliff.toml  lefthook.yml
.claude/: CLAUDE.md  settings.local.json
.config/: insta.yaml  nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: dependency_analysis.rs
docs/: PROJECT_REVIEW.md  migration-plan-data-loading-wizard.md
docs/design/: pr-dependency-ui-plan.md  pr-dependency-ui-progress.md  pr-dependency-ui-questions.md  pr-dependency-ui-verification.md  wizard-channel-plan.md  wizard-channel-progress.md  wizard-channel-tests.md  wizard-channel-verification.md
docs/examples/: cleanup.txt  main.txt  merge.txt  migrate.txt  release-notes.txt
docs/non-interactive-mode/: PLAN-PHASE8.md  PLAN.md  PROGRESS-PHASE8.md  PROGRESS.md  VERIFICATION-PHASE8.md  VERIFICATION.md
scripts/: find-revert-pairs.sh  prepare-release.sh
src/: api.rs  config.rs  error.rs  git.rs  git_config.rs  lib.rs  logging.rs  main.rs  migration.rs  models.rs  parsed_property.rs  ui.rs
src/api/: client.rs  credential.rs  mappers.rs  mod.rs  traits.rs
src/core/: mod.rs
src/core/operations/: cherry_pick.rs  data_loading.rs  dependency_analysis.rs  hooks.rs  mod.rs  post_merge.rs  pr_selection.rs  work_item_grouping.rs
src/core/output/: events.rs  format.rs  mod.rs
src/core/runner/: merge_engine.rs  mod.rs  non_interactive.rs  release_notes.rs  traits.rs
src/core/state/: file.rs  manager.rs  mod.rs
src/release_notes/: cache.rs  mod.rs
src/ui/: app.rs  app_base.rs  app_mode.rs  browser.rs  events.rs  mod.rs  snapshot_testing.rs  testing.rs  typed_run.rs  worktree_context.rs
src/ui/apps/: cleanup_app.rs  merge_app.rs  migration_app.rs  mod.rs
src/ui/snapshots/state/cleanup/branch_selection/: empty.snap  with_branches.snap  with_selections.snap
src/ui/snapshots/state/cleanup/cleanup_execution/: complete.snap  in_progress.snap  initial.snap
src/ui/snapshots/state/cleanup/data_loading/: complete.snap  error.snap  half_progress.snap  in_progress.snap  initial.snap  many_wrong_format_branches.snap  no_branches.snap  no_pattern_match.snap  wrong_format_branches.snap
src/ui/snapshots/state/cleanup/results/: failed_tab.snap  mixed_results.snap  no_failures.snap  success_tab.snap
src/ui/snapshots/state/default/aborting/: complete.snap  complete_with_error.snap  in_progress.snap
src/ui/snapshots/state/default/cherry_pick/: all_success.snap  in_progress.snap  initial_index.snap  mixed_end.snap  with_conflict.snap  with_failed.snap  with_skipped.snap
src/ui/snapshots/state/default/cherry_pick_continue/: failure.snap  processing.snap  success.snap
src/ui/snapshots/state/default/completion/: success.snap  with_conflicts.snap  with_skipped.snap
src/ui/snapshots/state/default/conflict_resolution/: bug_work_item.snap  conflict_display.snap  multiple_files.snap  pr_description.snap  task_work_item.snap
src/ui/snapshots/state/default/data_loading/: analyzing_dependencies.snap  analyzing_dependencies_no_count.snap  commit_info_no_total.snap  complete.snap  complete_all_steps.snap  complete_deps_skipped.snap  error_api_at_step1.snap  error_api_at_step2.snap  error_api_at_step3.snap  error_generic.snap  error_local_repo_not_found.snap  error_network_timeout.snap  error_no_prs_found.snap  fetching_commit_info.snap  fetching_prs.snap  fetching_work_items.snap  initializing.snap  initializing_with_local_repo.snap  initializing_without_local_repo.snap  not_started.snap  starting_work_items.snap  step_analyze_deps_completed.snap  step_analyze_deps_skipped.snap  step_analyze_deps_started.snap  step_fetch_commits_completed.snap  step_fetch_commits_progress.snap  step_fetch_commits_started.snap  step_fetch_prs_completed.snap  step_fetch_prs_started.snap  step_fetch_work_items_completed.snap  step_fetch_work_items_progress_0.snap  step_fetch_work_items_progress_100.snap  step_fetch_work_items_progress_50.snap  step_fetch_work_items_started.snap  work_items_no_total.snap
src/ui/snapshots/state/default/post_completion/: all_failed.snap  display.snap  mixed_errors.snap  partially_updated.snap  permission_errors.snap
src/ui/snapshots/state/default/pr_selection/: dependency_dialog.snap  dependency_highlighting_first_pr.snap  (+28 more)
src/ui/state/: cherry_pick.rs  choose.rs  completion.rs  conflict_resolution.rs  data_loading.rs  error.rs  migration.rs  migration_loading.rs  mod.rs  post_completion.rs  pr_selection.rs  setup_repo.rs  typed.rs  version_input.rs
src/ui/state/cleanup/: branch_selection.rs  cleanup_execution.rs  data_loading.rs  mod.rs  results.rs  state_enum.rs
src/ui/state/default/: aborting.rs  cherry_pick.rs  cherry_pick_continue.rs  completion.rs  conflict_resolution.rs  data_loading.rs  mod.rs  post_completion.rs  pr_selection.rs  release_notes_export.rs  setup_repo.rs  state_enum.rs  version_input.rs
src/ui/state/migration/: data_loading.rs  mod.rs  results.rs  state_enum.rs  tagging.rs  version_input.rs
src/ui/state/shared/: error.rs  mod.rs  settings_confirmation.rs  typed_error.rs  typed_settings_confirmation.rs
src/utils/: date_parser.rs  html_parser.rs  mod.rs  text.rs  throttle.rs
tests/: integration_tests.rs
tests/integration/: setup_test_repo.sh  test_scenarios.sh
(+58 files in other folders)
