[package]
name = "mergers"
version = "0.3.0"
edition = "2024"
description = "A comprehensive tool for managing Azure DevOps pull request merging and migration workflows"
license = "MIT"
repository = "https://github.com/egeapak/mergers"
keywords = ["azure-devops", "git", "merge", "migration", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mergers"
path = "src/lib.rs"

[[bin]]
name = "mergers"
path = "src/bin/mergers.rs"

[dependencies]
tokio = { version = "=1.49.0", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
ratatui = "=0.30.0"
crossterm = "=0.29.0"
chrono = { version = "=0.4.43", features = ["serde"] }
anyhow = "=1.0.100"
thiserror = "=2.0.17"
secrecy = "=0.10.3"
clap = { version = "=4.5.54", features = ["derive", "color"] }
async-trait = "=0.1.89"
futures = "=0.3.31"
tempfile = "=3.24.0"
scraper = "=0.25.0"
ego-tree = "=0.10.0"
toml = "=0.9.11"
dirs = "=6.0.0"
regex = "=1.12.2"
percent-encoding = "2.3"
sha2 = "=0.10.9"
libc = "=0.2.180"
time = "0.3"
rayon = "1.10"
roaring = "0.10"

# Azure DevOps API client
azure_devops_rust_api = { version = "0.32", features = ["git", "wit"] }

# Clipboard support
arboard = "3.4"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "=0.4.4"
tempfile = "=3.24.0"
insta = { version = "=1.44.3", features = ["yaml"] }
serial_test = { version = "=3.2.0", features = ["file_locks"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "dependency_analysis"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
